<resources>
    <string name="app_name">authMobile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login com Google</string>
    <string name="login_with_github">Login com GitHub</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="profile_picture">Foto de perfil</string>
</resources>